[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.7"
base64 = "0.13.0"
bytes = "1.1.0"
image = "0.24.2"
lazy_static = "1.4.0"
lru = "0.7.7"
percent-encoding = "2.1.0"
photon-rs = "0.3.1"
prost = "0.10.4"
reqwest = "0.11.11"
serde = "1.0.137"
tokio = "1.19.2"
tower = "0.4.12"
tower-http = "0.3.4"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"

[build-dependencies]
prost-build = "0.10.4"
